puree-tests/src/test/resources/neg/UnusedNone.scala
object UnusedOption {
  def f(): Int = {
    None
    1
  }
}
